EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==10/30/2009==
KLS: Exported DoSpecialAttackDamage() to perl::mob;

==10/25/2009==
WildcardX: Tweaked guilds a little to accomodate integrating BOTS.
WildcardX: Bots can not join guilds in the same way as characters can. Bots can only be members, not officers.
WildcardX: Deprecated the legacy BotRaids system and all #bot raid commands. Also deprecated the legacy botgroups table.
WildcardX: Renamed the #bot group order ... series of commands into only #bot group ...

<SQL Required for BOTS> 1040_DeprecatedBotRaidsSystems.sql

==10/23/2009==
KLS: Added discussed work around for SoF > level 75 issue from forums.
WildcardX: Bot pets and bot pet items and bot pet buffs will now save their state to the database between zones and camps just like a character.
WildcardX: Add SQL to create unique columns in group_id and group_leaders tables in hopes of removing the last of the seemingly random issues with groups and zoning.

<SQL Optional> 1038_grouptablesuniquecolumndefinitions.sql
<SQL Required for BOTS> 1038_botpetstatepersists.sql

==10/21/2009==
WildcardX: Bots will now persist their buffs to the database while zoning or camped.

<SQL Required for BOTS> 1036_botbuffs.sql

==10/20/2009==
WildcardX: Bots can now be a group leader. A character can now make not only a group mixed with both bots and other characters, but also groups with all bots and lead by a bot the character designates. Please see #bot botgroup help for details. The legacy BotRaids logic will be removed from the server code in the next 24/48 hours. This effectivly makes bot raiding the same as before the raid system was created. Much of the existing "#bot group order" commands will also be deprecated soon.
WildcardX: Fix for a bug with #bot botgroup add.
WildcardX: Fix for a bug with bot group leader's record in group_id table not removing any older records.